fix(lobby): added container css to lobby player render to not overflow

--- a/client/src/app/pages/lobby/lobby.component.scss
+++ b/client/src/app/pages/lobby/lobby.component.scss
@@ -11,6 +11,17 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    // align-items: center;
+    min-height: 100vh;
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: $primary-bg;
+    color: $primary-text;
+}
+
 .access-code-container {
     display: flex;
     flex-direction: column;
